--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+/logs/*
+/logs
+**/application.properties
+application.properties
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
