--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
+    maven{ url 'https://maven.aliyun.com/repository/central' }
+    maven{ url 'https://maven.aliyun.com/repository/public' }
+    maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
 }
 
 dependencies {
