初始化备份

--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,18 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'com.alibaba.fastjson2:fastjson2:2.0.41'
+    implementation 'com.alibaba.fastjson2:fastjson2-extension-spring6:2.0.41'
+    implementation 'com.mybatis-flex:mybatis-flex-spring-boot-starter:1.7.3'
+    annotationProcessor 'com.mybatis-flex:mybatis-flex-processor:1.7.3'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'com.zaxxer:HikariCP'
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.31'
 }
 
 tasks.named('test') {
